--- a/login.html
+++ b/login.html
@@ -1,16 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <p>LOGIN</p>
-    <h1>
-        <a href="index.html">funkoshop</a>
 
-    </h1>
-    
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Funkoshop G3</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="styles/login.css" />
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid mx-auto d-flex justify-content-around" id="contenedorBarraNav">
+            <a class="navbar-brand" href="./index.html">
+                <img src="img/branding/logo_light_horizontal.svg" alt="" srcset="" />
+            </a>
+            <ul class="navbar-nav text-white">
+                <li class="nav-item dropdown">
+                    <a class="dropbtn nav-link" href="./shop.html">
+                        SHOP
+                        <iconify-icon icon="tabler:chevron-down" style="color: white">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="1.25rem" height="1.25rem">
+                                <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" d="m6 9l6 6l6-6"></path>
+                            </svg>
+                        </iconify-icon>
+                    </a>
+                    <div class="dropdown-content">
+                        <a class="nav-link" href="./shop.html">Funkos</a>
+                        <a class="nav-link" href="./shop.html">Remeras</a>
+                        <a class="nav-link" href="./shop.html">Llaveros</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">CONTACTO</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./login.html">LOGIN</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link bg-transparent" href="#" id="carritoNavbar">
+                        <img src="img/icons/cart-icon.svg" alt="" srcset="" />
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+<!-- INICIO DEL MAIN -->
+
+<main id="inicio-sesion" class="contenedor">
+    <h2 class="titulo-inicio-sesion">INGRESAR A MI CUENTA</h2>
+    <form class="formulario-inicio-sesion formulario" action="" method="post">
+        <div class="caja-formulario--cuadricula">
+            <label class="etiqueta-formulario" for="email">Email:</label>
+            <input class="entrada-formulario" type="text" name="email" id="email" placeholder="johndoe@email.com">
+        </div>
+        <div class="caja-formulario--cuadricula">
+            <label class="etiqueta-formulario" for="password">Contraseña:</label>
+            <input class="entrada-formulario" type="password" name="password" id="password" placeholder="●●●●●●●●●●●">
+        </div>
+        <div class="envio-formulario">
+            <input class="boton-formulario btn btn--principal btn--grande" type="submit" value="Ingresar">
+            <div class="recordar-formulario">
+                <input type="checkbox" name="remember" id="remember">
+                <label for="remember">Recordarme</label>
+            </div>
+        </div>
+        <a class="enlace-formulario" href="#">Olvidé mi contraseña</a>
+    </form>
+</main>
+
+<!-- FIN DEL MAIN -->
+
 </body>
+
+<footer class="container-fluid contenedorFooter ">
+    <section class='container m-auto'>
+        <nav class="navbar">
+            <ul class="nav-item footerList">
+                <li class="nav-item">
+                    <a class="nav-link" href="./pages/shop/shop.html">SHOP</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./pages/register.html">REGISTRARSE</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./pages/admin/login.html">LOGIN</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./pages/contact.html">CONTACTO</a>
+                </li>
+            </ul>
+            <picture>
+                <img src="./img/branding/isotype.svg" alt="Isotipo de la marca Funkoshop">
+            </picture>
+        </nav>
+        <p class='text-center'>
+            <sub class="footer-copyright">All rights reserved 2023 - Funkoshop ©</sub>
+        </p>
+    </section>
+</footer>
+
+<script src="./js/index.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
